SERVER-61097 SizeStorer flush uses 'operation_timeout_ms' to avoid deadlocks with cache eviction